--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "debug": "nodemon --inspect=9229 app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HockeyStack",
@@ -22,6 +24,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "eslint": "^8.34.0"
+    "eslint": "^8.34.0",
+    "nodemon": "^3.0.1"
   }
 }
