--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "debug": "nodemon --inspect=9229 app.js",
     "lint": "eslint ./",
     "lint:fix": "eslint --fix ./",
+    "prettier": "prettier . --write --ignore-path .eslintignore",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HockeyStack",
@@ -28,11 +29,14 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.5",
     "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.6.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^2.8.8"
   }
 }
