--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ./",
     "lint:fix": "eslint --fix ./",
     "prettier": "prettier . --write --ignore-path .eslintignore",
+    "refactor": "npm run lint:fix && npm run prettier",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "HockeyStack",
